# marmelade

./: .gitignore  CLAUDE.md  Project.md  README.md  pyproject.toml
docs/screenshots/: README.md
scripts/: fetch_models.sh
src/marmelade/: __init__.py  __main__.py  app.py  paths.py
tests/: conftest.py
tests/fixtures/: synthesize.py
tests/integration/: test_ab_switch.py  test_ab_toggle_disabled.py  test_about_dialog.py  test_centroid_tint.py  test_click_to_seek.py  test_dialogs.py  test_divergence_badge.py  test_ending_fx_dialog.py  test_ending_fx_render.py  test_export_export_runnable.py  test_export_uses_mastered_cache.py  test_graphics_layout_refactor.py  test_keeper_play_normalize.py  test_keeper_row_share_button.py  test_keepers_sidebar.py  test_keepers_sidebar_drag_reorder.py  test_main_window.py  test_main_window_audio_proxy_cache_hit.py  test_main_window_audio_proxy_cancel_restart.py  test_main_window_audio_proxy_disk_pressure.py  test_main_window_audio_proxy_exit_during_build.py  test_main_window_audio_proxy_mp3_open.py  test_main_window_audio_proxy_overlay.py  test_main_window_audio_proxy_play_button_disabled.py  test_main_window_audio_proxy_playback_uses_proxy.py  test_main_window_audio_proxy_seek_bounds.py  test_main_window_audio_proxy_status_bar.py  test_main_window_audio_proxy_wav_skip.py  test_main_window_clear_audio_cache.py  test_main_window_export_edit_menu.py  test_main_window_fade_config.py  test_main_window_resample_on_open.py  test_main_window_skeleton.py  test_markers_feature.py  test_master_export_all.py  test_mastering_cache_invalidation.py  test_mastering_dialog.py  test_mastering_dock.py  test_matchering_reference_picker.py  test_open_to_render.py  (+25 more)
tests/perf/: test_audio_proxy_paint_budget.py  test_mastering_default_chain_60s_budget.py  test_mastering_full_chain_60s_budget.py  test_regions_overlay_cpu_budget.py  test_render_frame_budget.py  test_spectral_budget.py
tests/unit/: test_audio_file.py  test_audio_proxy_builder.py  test_audio_proxy_builder_rf64.py  test_audio_proxy_cache.py  test_audio_proxy_worker.py  test_conftest_tmp_cache_dir.py  test_heatmap_lane.py  test_keeper_play_start_offsets.py  test_n3_invariant.py  test_param_dataclass.py  test_paths.py  test_peak_decimation.py  test_playback_engine.py  test_proxy_cache_io.py  test_proxy_cache_key.py  test_render_modes.py  test_smoke.py  test_spectral_viewport_aggregate.py  test_theme_config.py  test_trash_keeper_subtract.py
tests/util/: test_poem_generator.py
tests/youtube/: conftest.py  test_oauth.py  (+4 more)
(+128 files in other folders)
