[project]
name = "marmelade"
version = "0.1.0"
description = "Desktop DAW-style waveform viewer and clip extractor for long unstructured jam recordings."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Marmelade" }]
dependencies = [
    "PySide6==6.11.*",
    "pyqtgraph==0.13.*",
    # numpy <2.0 is a numba/librosa compatibility ceiling (numba ships with
    # librosa), NOT a TensorFlow/Essentia leftover — do not "reclaim" it as
    # dead. Revisit only alongside a librosa+numba bump verified against the
    # spectral/LUFS paths.
    "numpy>=1.22,<2.0",
    "pedalboard>=0.9.22",
    "soundfile>=0.13",
    "xxhash>=3.0",
    "sounddevice>=0.5.0,<0.6",
    # librosa/soxr/numpy are shared by surviving code (spectral_builder,
    # waveform_view, lufs, resample_to_48k) — NOT heatmap-only. The dead
    # AI-heatmap dependency stack (and the pkg_resources setuptools pin that
    # only existed for its import machinery) was removed in quick-260701-muv.
    "librosa>=0.10,<0.11",
    "soxr>=0.3",
    "matchering>=2.0.6,<3",
    "pyloudnorm>=0.2.0,<0.3",
    # Phase 8 — YouTube upload + bundled ffmpeg + OS-keychain token storage
    # + cross-platform config path. Version floors verified live on PyPI
    # 2026-05-21 (see 08-RESEARCH.md §"Standard Stack"). Upper bounds follow
    # the established <N+1 SemVer discipline so a major release upgrade is
    # an explicit decision (T-08-01-01 mitigation — pyproject.toml threat
    # register).
    "google-auth-oauthlib>=1.4,<2",
    "google-api-python-client>=2.196,<3",
    "keyring>=25.7,<26",
    "imageio-ffmpeg>=0.6,<0.7",
    "Pillow>=12.2,<13",
    # platformdirs (N1, revision iter 1) — cross-platform plaintext-fallback
    # path in oauth.py (Linux/macOS/Windows). May already be a transitive
    # dep via keyring on some platforms; pinning explicitly removes the
    # platform-conditional ambiguity.
    "platformdirs>=4,<5",
]

[project.scripts]
marmelade = "marmelade.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marmelade"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-qt>=4.5",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
addopts = "-ra"
markers = [
    "perf: perf-gated tests; skip under QT_QPA_PLATFORM=offscreen",
    "slow: tests that take >5s — skip with `pytest -m 'not slow'`",
]
